--- a/i18n/zh-CN/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh-CN/docusaurus-plugin-content-docs/current.json
@@ -3,7 +3,7 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.tutorialSidebar.category.module project": {
+  "sidebar.tutorialSidebar.category.Project Management": {
     "message": "项目管理",
     "description": "项目管理"
   },
